  New Build Process

0048
- execute destructors of some gui-functions and call abort_install()
  with pointer to this destructor (or NULL if not needed)
- small changes to request_number (integer gadget)
- implemented "rename"
- added a GUI function user_confirm(char *) to ask user to proceed or skip
- added some more preset variables/help texts

0049
- use (preset) @askstring variable instead of fixed ASKSTRING_HELP,
  same for asknumber and askchoice
- partially implemented (delete). Need to implement (optional) and (delopts)
- gui for (askchoice)

0050
- fixed crash of askchoice gui

0051
- implemented a basic (makedir), no (infos) support.
- moved version string from main.c to version.h
- implemented a basic (execute)

0052
- implemented (fileonly) and (pathonly)
- suppressed warnings by adding casts to (IPTR) and setting initial values
  for variables
- implemented (earlier)
- implemented (getdiskspace)

0053
- use StrDup() instead of strdup()
  malloc(), calloc(), free() -> AllocVec(), FreeVec()
  implemented ReAllocVec() as a replacement for realloc() in
  AROS/compiler/alib

0054
- implemented (getenv)
- Updated Copyright string to 2003
- IconBase is now opened automatically

0055
- small fix to make it run from Workbench again
- added sources for test.script.info
- removed obsolete parts from gui

0056
- added Locale support

0057
- removed opening of Libraries as this is now done through libautoinit
- moved prototypes of .c files to .h files

0058
- started a Zune/MUI GUI gui_zune.c

0059
- implemented for Zune:
  * request_userlevel
  * request_confirm
  * show_message
  * request_bool
  * request_choice
  * Help Requester (makes more.[ch] obsolete for this GUI)
  * request_options
- switched to Zune as default
- removed user_confirm() as it is not used

0060
- implemented (getsize) via POSIX stat()
- updated path of test.script
- implemented (makeassign)
- implemented (getassign)
- implemented (getdevice)
- implemented (tackon)
